--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
   localstack:
     image: localstack/localstack-pro
     container_name: localstack
-    env_file: ./s3connector/deploy.env
+    env_file: ./localstack/deploy.env
     ports:
       - "4566:4566"            # LocalStack Gateway
       - "4510-4559:4510-4559"  # external services port range
@@ -45,6 +45,7 @@ services:
     volumes:
       - ./localstack/volume:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: on-failure
 
 
 # SERVICES
