--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,10 +47,28 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: on-failure
 
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--api.insecure=true"
+      - "--api.dashboard=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      # - "--entrypoints.web.address=:80"
+      - "--configFile=/etc/traefik/traefik.yml"
+      - "--log.level=DEBUG"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik/traefik.yml:/etc/traefik/traefik.yml:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 # SERVICES
   composer:
-    image: registry.deti:5000/egs-conv/composer-service:v1
+    image: registry.deti:5432/egs-conv/composer-service:v1
     container_name: composer
     ports:
       - "8888:8888"
@@ -62,13 +80,13 @@ services:
     environment:
       - PYTHONPATH=/home/app
 
-  notification:
-    image: registry.deti:5000/egs-conv/notification-service:v1
-    container_name: notification
-    env_file: ./notification/deploy.env
+  conversion:
+    image: registry.deti:5000/egs-conv/conversion-service:v1
+    container_name: conversion
+    env_file: ./conversion/deploy.env
     depends_on:
-      - localstack
       - activemq
+      - composer
     
   s3connector:
     image: registry.deti:5000/egs-conv/s3connector-service:v1
@@ -77,4 +95,19 @@ services:
     depends_on:
       - localstack
       - activemq
+      - composer
+
+  notification:
+    image: registry.deti:5000/egs-conv/notification-service:v1
+    container_name: notification
+    env_file: ./notification/deploy.env
+    depends_on:
+      - localstack
+      - activemq
+      - composer
+
+  web:
+    image: registry.deti:5000/egs-conv/web-service:v1
+    container_name: web
+    env_file: ./web/deploy.env
 
